# fence_insertion

./: .gitignore  BIR_Instruction.py  IRSBSplitter.py  README.md  __init__.py  arch_bir.py  instrs_bir.py  lift_bir.py  load_bir.py  parse_bir.py  parser_bir.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simos_bir.py  symbolic_execution.py  symbolic_execution_wrapper.py  test_bir.py  test_lift_bir.py
bir/: BIR_Instruction.py  IRSBSplitter.py  arch_bir.py  instrs_bir.py  lift_bir.py  observations.py  simos_bir.py
examples/: bir_program.bir  bir_program10.bir  bir_program11.bir  bir_program2.txt  bir_program3.bir  bir_program4.bir  bir_program5.txt  bir_program7.bir  bir_program8.bir  bir_program9.bir  test.bir  test3.bir  test4.bir  test5.bir  test_assert.bir  test_obs.bir  test_obs2.bir  test_obs3.bir  test_obs4.bir  test_obs5.bir  test_obs6.bir
examples/birprogram/: bir_program6.bir  test2.bir  test_obs5.bir  test_obs6.bir
examples/json/: bir_program6.bir  example_tutorial.bir  magicinput2.bir  test2.bir  test3.bir  test_assert.bir  test_ite.bir  test_obs5.bir  test_obs6.bir  test_obsref.bir  test_store3.bir
src/bir_angr/: default_filler_memory.py  local_loop_seer_bir.py  own_claripy_printer.py  shadow_object.py  symbolic_execution.py  trace_exporter.py
src/bir_angr/bir/: BIR_Instruction.py  IRSBSplitter.py  __init__.py  arch_bir.py  concretization_strategy_bir.py  instrs_bir.py  lift_bir.py  load_bir.py  observations.py  parse_bir.py  (+1 more)
tests/: test_bir.py  test_lift_bir.py
tests/test_load_data/: bin  bin.S  bin.da  bin_-R.data.elf  bin_-j.text.elf
(+3 files in other folders)
