[metadata]
name = bir_angr
version = 0.0.1
author = Tiziano
author_email = Tiziano
description = Bir support in Angr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tiziano-M/fence_insertion
project_urls =
    Bug Tracker = https://github.com/Tiziano-M/fence_insertion/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

